use default GC; bind to 127.0.0.1 on prod